Important changes since GBBopen 0.9.6:

  * Version 1.2 of the Mini-Module System
    - Support module-relative directory specifications; implicit module rooting

  * Added shrink-vector to GBBopen-tools
 
  * Version 2.2 of the Portable Threads Interface
    - Periodic functions

  * Version 2.1 of the Portable Threads Interface
    - Scheduled functions, thread-alive-p, encode-time-of-day

  * Version 2.0 of the Portable Threads Interface
    - Recursive and nonrecursive locks, with stronger enforcement of usage
      violations (to reduce the potential for different behavior on different
      CL implementations).
    - Use of condition variables for thread waiting/notification
    - Improved hibernation behavior
    - With-timeout added

    The names of many Portable Threads functions were changed (for
    consistency with new capabilities and to make the portable-threads
    interface names more "thread-centric" rather than "process-centric"):
       all-processes              all-threads
       awaken-process             awaken-thread
       current-process            current-thread
       hibernate-process          hibernate-thread
       kill-process               kill-thread
       make-process-lock          make-recursive-lock
       process-name               thread-name
       processp                   threadp
       process-wait               thread-wait
       process-wait-with-timeout  thread-wait-with-timeout
       process-whostate           thread-whostate
       process-yield              thread-yield
       run-in-process             run-in-thread
       spawn-process              spawn-thread
       symbol-value-in-process    symbol-value-in-thread
       with-process-lock          with-lock-held
       <new>                      condition-variable (object)
       <new>                      condition-variable-broadcast
       <new>                      condition-variable-signal
       <new>                      condition-variable-wait